--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
     "roughjs": "^4.5.2",
     "socket.io-client": "^4.6.1",
